--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
+  margin: 0;
 }
 
 .background-container {
@@ -18,6 +19,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 800px;
+  width: 850px;
   height: 700px;
 }
