--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
 }
 
+*:root {
+  --primary-color: rgb(31, 31, 31);
+}
+
 body {
-  background: rgb(31, 31, 31);
+  background: var(--primary-color);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   height: 100vh;
   margin: 0;
+  color: var(--primary-color);
 }
 
 .background-container {
@@ -20,5 +27,75 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   width: 850px;
+  background-size: auto 100%;
   height: 700px;
+  border-radius: 50px;
+  padding: 1rem;
+}
+
+/* Holiday Select */
+.holiday-select-container {
+  background-image: url(/images-resources/drop-down-background-large.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 250px;
+  height: 600px;
+  margin-left: 2rem;
+  border-radius: 10px;
+  overflow: scroll;
+  padding: 0.5rem;
+  line-height: 1.4rem;
+}
+
+ul.holiday-list {
+  margin: 0;
+  padding: 0;
+}
+
+ul.holiday-list li {
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+}
+
+.collapse-list {
+  height: 20px;
+}
+
+/* Countdown */
+.countdown-text {
+  font-family: 'Overpass', sans-serif;
+  /* font-style: italic; */
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.countdown-text span {
+  font-family: 'Lobster', cursive;
+  font-size: 3rem;
+}
+
+.time-unit {
+  margin: 1.5rem;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--primary-color);
+  padding-bottom: 10px;
+}
+
+p {
+  margin: 0;
+}
+
+.time-unit p:first-of-type {
+  font-weight: 500;
+}
+
+.time-unit p:nth-of-type(2) {
+  width: 50px;
+  text-align: center;
 }
