--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ p {
   width: 175px;
   position: absolute;
   top: -15px;
-  right: -270px;
+  right: -330px;
 }
 
 .holiday-select-container {
@@ -89,7 +89,7 @@ p {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 200px;
+  width: 250px;
   height: 600px;
   margin: 0;
   border-radius: 10px;
@@ -104,26 +104,24 @@ ul.holiday-list {
   padding: 2rem 0;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 
 ul.holiday-list li {
   text-align: center;
   list-style: none;
   text-decoration: none;
-  padding: 0;
-  margin: 0 0 10px 1rem;
-  border-left: 3px solid var(--primary-color);
-  width: 60%;
   font-weight: 500;
-  transition: padding-left 0.1s linear;
-  border-radius: 0;
+  padding: 10px;
+  transition: transform 0.1s;
 }
 
 ul.holiday-list li:hover {
+  transform: translate(3px);
   cursor: pointer;
-  padding-left: 5px;
-  border-radius: 2px 0 0 2px;
+  background: rgba(255, 255, 255, 0.209);
+  outline: 2px solid rgba(241, 120, 195, 0.6);
+  border-radius: 2px;
 }
 
 .collapse-list {
