update holiday-list image to an imgur link

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ p {
 }
 
 .holiday-select-container {
-  background-image: url(/images-resources/drop-down-background-large.png);
+  background-image: url(https://i.imgur.com/eiiuB1y.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
